--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,9 @@
-{"Compilers":[],"SelectedCompiler":"","ProjectLang":"cpp"}
+{
+    "Compilers": [
+        "/usr/bin/gcc",
+        "/usr/bin/g++",
+        "/usr/bin/cpp"
+    ],
+    "SelectedCompiler": "",
+    "ProjectLang": "C++"
+}
