--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"ProjectName":"","ProjectLang":"C++","SelectedCompiler":"","MainFile":"","MainDir":"","Compilers":["/usr/bin/gcc","/usr/bin/g++","/usr/bin/cpp"]}
+{"ProjectName":"","ProjectLang":"C++","SelectedCompiler":"/usr/bin/gcc","MainFile":"main.cpp","MainDir":"src","Compilers":["/usr/bin/gcc","/usr/bin/g++","/usr/bin/cpp"]}
