--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"ProjectName":"","ProjectLang":"C++","SelectedCompiler":"/usr/bin/g++","MainFile":"main.cpp","MainDir":"src","Compilers":["/usr/bin/gcc","/usr/bin/g++","/usr/bin/cpp"]}
+{"ProjectName":"f","ProjectLang":"C++","SelectedCompiler":"","MainFile":"main.cpp","MainDir":"src","Compilers":["/usr/bin/gcc","/usr/bin/g++","/usr/bin/cpp"]}
